# ha-nws-alerts

./: .gitignore  .release-please.config.json  CHANGELOG.md  README.md  hacs.json  pyproject.toml
.github/workflows/: cd.yml  ci.yml  release-please.yml  release.yml
custom_components/nws_alerts/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
tests/: test_config_flow.py  test_coordinator.py  test_sensor.py
tests/fixtures/: alerts_active.json
